# StableNew

./: .codex.RUNBOOK.md  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT_S3_S4_READINESS.md  CHANGELOG.md  CONTRIBUTING.md  GUI_ENHANCEMENTS.md  ISSUE_ANALYSIS.md  LAUNCHERS.md  OPEN_ISSUES_RECOMMENDATIONS.md  README.md  _tmp_check.py  create_desktop_shortcut.ps1  custom_pack_lists.json  debug_batch.py  launch_stablenew.bat  launch_stablenew_advanced.bat  launch_webui.py  pyproject.toml  requirements.txt  simple_debug.py  temp_ppp_test.py  temp_ppp_test2.py  temp_prefs2.json  temp_tk_test.py  test_advanced_features.py  test_gui_enhancements.py  test_gui_system.py  test_gui_visibility.py  test_pack_config.py
.codex/: config.toml
.github/: CODEOWNERS  CODEX_SOP.md  PULL_REQUEST_TEMPLATE.md  co-pilot documentation and best practices.md  copilot-instructions.md
docs/: BUG_FIX_GUI_HANG_SECOND_RUN.md  CODEX_AUTOFIX.md  CONFIGURATION_TESTING_GUIDE.md  DEFAULT_PRESET_IMPLEMENTATION.md  GUI_REVAMP_SUMMARY.md  MATRIX_PROMPT_MODE.md  PR1_CONFIG_BANNER_IMPLEMENTATION.md  PR2_CONFIG_SERVICE_IMPLEMENTATION.md  PR3_LOAD_CONTROLS_IMPLEMENTATION.md  PR4_CONFIG_LOCK_IMPLEMENTATION.md  PR5_APPLY_TO_PACKS_IMPLEMENTATION.md  PR6_PRESET_CRUD_IMPLEMENTATION.md  PR7_LIST_MANAGEMENT_IMPLEMENTATION.md  PR8_PREVIEW_PAYLOAD_IMPLEMENTATION.md  PROJECT_REORGANIZATION_SUMMARY.md  RECENT_BUGS_AND_LESSONS.md  SECURITY_FIX_CODEX_AUTOFIX.md  SPRINT_SUMMARY.md  SPRINT_SUMMARY_PR_F-H.md  THREADING_FIX.md  _toc.md  engineering_standards.md  gui_overview.md  journey_test_coverage_checklist.md  refactor_plan_main_window_gui_20251102_postAgent.md  repo_cleanup_plan.md  testing_strategy.md
packs/: ADetailer_Face_Hero_Pack.txt  Abethkara.txt  CPT_Moroni.json  CPT_Moroni.txt  Juggernaut_SDXL_MedievalRealism_Pack_Hybrid.txt  Juggernaut_SDXL_MedievalRealism_Pack_V1.txt  Juggernaut_SDXL_MedievalRealism_Pack_V2.txt  Juggernaut_SDXL_MedievalRealism_Pack_V3.txt  Juggernaut_SDXL_MedievalRealism_Pack_V4.txt  Juggernaut_SDXL_MedievalRealism_Pack_V5.txt  SDXL_angelic_warriors_Fantasy.txt  SDXL_angelic_warriors_Realistic.txt  SDXL_batch_prompts_fantasy_creatures_FIXED.txt  SDXL_batch_prompts_heroes.txt  SDXL_batch_prompts_heroes_vs_villains.txt  SDXL_batch_prompts_heroes_vs_villains_ALT.txt  SDXL_batch_prompts_heroes_vs_villains_DUEL.txt  SDXL_batch_prompts_heroes_vs_villains_DUEL_Fantasy.txt  SDXL_batch_prompts_heroes_vs_villains_Fantasy.json  SDXL_batch_prompts_villains.txt  SDXL_batch_prompts_villains_ALT.txt  SDXL_beautiful_women_Fantasy.json  SDXL_beautiful_women_Realistic.json  SDXL_characters_10.json  SDXL_characters_10_ALT.txt  SDXL_epic_structures_Realistic.json  SDXL_heroes_10.txt  SDXL_heroes_10_ALT.json  SDXL_heroes_10_ALT.txt  SDXL_heroes_10_ALT_MOD.json  SDXL_heroes_10_ALT_MOD.txt  SDXL_heroes_10_ALT_MOD_Fantasy.json  SDXL_heroes_10_ALT_MOD_Realistic.json  SDXL_heroes_10_ALT_Realistic.json  SDXL_heroes_13_ChatGPTAdjusted.json  SDXL_heroes_13_ChatGPTAdjusted.txt  SDXL_mythical_beasts_Realistic.json  Test_Dragon_Battle.txt  Test_Epic_Castle_And_Village.txt  Test_Group_Scene.txt  (+18 more)
src/: cli.py  (+1 more)
(+183 files in other folders)
